--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,9 @@ a:hover {
 .hero-brand {
   margin-bottom: 75px;
   display: inline-block;
+  max-width: 100%;
+  height: auto;
+  width: auto;
 }
 
 .hero-brand:hover {
